add google-services.json reference

--- a/app.json
+++ b/app.json
@@ -26,7 +26,8 @@
     "android": {
       "useNextNotificationsApi": true,
       "package": "com.expo.notifications.inconsistency",
-      "versionCode": 1
+      "versionCode": 1,
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "favicon": "./assets/favicon.png"
